--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
     "devDependencies": {
         "eslint-config-prettier": "^8.8.0",
         "prettier": "^2.8.7"
-    }
+    },
+    "homepage": "https://kazunori-kimura.github.io/iink-sample/"
 }
